# Text2SQL-Memory-Agent

./: .gitignore  LICENSE  README.md  blog_post_updated.md  main.py  pyproject.toml  setup_conda.sh
core_logic/: detailed_test_setup.py  gradio_frontend.py  memory_agent_opensource.py  postgreSQL_data_client.py  test_db_setup.sql  text2sql_chatbot.py
