[project]
name = "text2sql-memory"
version = "1.0.0"
description = "Text2SQL agent with long-term memory using open-source components"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
keywords = ["text2sql", "memory", "llm", "postgresql", "embeddings"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "gradio>=5.0.0",
    "psycopg2-binary>=2.9.9",
    "sentence-transformers>=2.7.0",
    "numpy>=1.26.4",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "pandas>=2.2.2",
    "aiofiles>=23.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.8.0",
    "isort>=5.13.2",
    "flake8>=7.1.1",
    "mypy>=1.11.1",
    "pre-commit>=3.8.0",
]
test = [
    "pytest>=8.3.2",
    "pytest-asyncio>=0.23.8",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.31",
    "mkdocstrings[python]>=0.25.2",
]
all = [
    "text2sql-memory[dev,test,docs]",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/text2sql-memory"
"Bug Tracker" = "https://github.com/yourusername/text2sql-memory/issues"
"Documentation" = "https://github.com/yourusername/text2sql-memory#readme"
"Source Code" = "https://github.com/yourusername/text2sql-memory"

[project.scripts]
text2sql-demo = "demo_memory_features:main"
text2sql-setup = "setup_databases:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | memory_data
)/
'''

[tool.isort]
profile = "black"
line-length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = [
    "memory_data/",
    "tests/",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.coverage.run]
branch = true
source = ["."]
omit = [
    "tests/*",
    "setup.py",
    "*/migrations/*",
    "*/__init__.py",
    "memory_data/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[tool.ruff]
target-version = "py310"
line-length = 100
fix = true
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "UP", # pyupgrade
    "B",  # flake8-bugbear
    "C",  # flake8-comprehensions
    "D",  # pydocstyle
]
ignore = [
    "D100", # Missing docstring in public module
    "D104", # Missing docstring in public package
    "D107", # Missing docstring in __init__
    "D203", # 1 blank line required before class docstring
    "D213", # Multi-line docstring summary should start at the second line
]

[tool.ruff.per-file-ignores]
"tests/*" = ["D"]

[tool.uv]
dev-dependencies = [
    "black>=24.8.0",
    "pytest>=8.3.2",
    "mypy>=1.11.1",
]